Fix Scroll up arrow is not centered

--- a/resources/less/extension.less
+++ b/resources/less/extension.less
@@ -35,4 +35,7 @@
         width:40px;
         height:40px;
     }
+    .scroll-up .fa.fa-chevron-up {
+        padding-top: 1.25em;
+    }
 }
